# RENTT

./: .gitignore  README.md  pyproject.toml  setup.py
Data/Absolute/: Absolute.csv
Data/BostonHousing/: BostonHousing.csv
Data/CarEvaluation/: CarEvaluation.csv
Data/Diabetes/: Diabetes.csv
Data/Linear/: Linear.csv
config/: RENTT-FI.yaml  RENTT.yaml
config/dataset/: Absolute.yaml  CaliforniaHousing.yaml  CarEvaluation.yaml  DiabetesClass.yaml  DiabetesReg.yaml  ForestCoverType.yaml  Iris.yaml  Linear.yaml  WineQuality.yaml
scripts/: main_RENTT-FI.py  main_RENTT.py
src/: DT.py  config.py  feature_importance.py  nn_pytorch.py  nn_tensorflow.py  read_data.py  utils.py
